--- a/riddles.html
+++ b/riddles.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>元宵“猜灯谜”</title>
+		<title>元宵猜灯谜2022-Peter</title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
